kubernetes/cluster0/apps/minio/minio/tenant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  hostnames:
    - minio.${SECRET_PUBLIC_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: networking
      sectionName: websecure
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: minio-tenant-console
        namespace: longhorn-system
        port: 9443
      matches:                                                                                                                                                                                                                                                  
      - path:                                                                                                                                                                                                                                                   
          type: PathPrefix                                                                                                                                                                                                                                      
          value: /
